# SkyNeuralNets

./: .gitignore  ArchitectureTrials_optuna.py  CNN_2D_projections.ipynb  CNN_2D_projections.py  Deep_Sphere_test(kernel_dies).ipynb  Deep_Sphere_test.ipynb  Deep_Sphere_test.py  FCNN_test.py  Fully_connected_NN.ipynb  LICENSE  NN_suggested_Optuna.py  NN_suggested_optuna.ipynb  Optuna_CNN_2D_proj.py  Optuna_CNN_2D_projections.py  Optuna_trials_fully_connected_nn.py  README.md  pyproject.toml  requirements.txt  setup.py
SandBox/: CNN_2D_physical_Feat_PCA.ipynb  CNN_2D_projections.ipynb  CNN_EE_physical_Feat_PCA.ipynb  CNN_TE_physical_Feat_PCA.ipynb  PCA_Feature_plots.ipynb
SkyNeuralNets/: __init__.py
Tests/: CNN_2D_projections.ipynb  Fully_connected_NN.ipynb  Optuna_CNN_2D_proj.py
data/: CNN_PCA_Q_model.h5  CNN_PCA_T_model.h5  CNN_PCA_U_model.h5
functions/: __init__.py  cnn_pipeline.py  data_preprocessing.py
old_notebooks/: ArchTrialsDeepSphere_optuna.py  CNN_2D_physical_Feat_PCA.ipynb  CNN_2D_projections.py  CNN_T_PCA_overfitting.ipynb  Deep_Sphere_test.py  Optuna_FCNN.py
src/skyneuralnets/: __init__.py  architectures.py  calibration.py  cnn.py  confusion.py  preprocessing.py  train.py
tests/: ArchTrialsDeepSphere_optuna.ipynb  CNN_2D_physical_Feat.ipynb  CNN_2D_physical_Feat_NLdec.ipynb  CNN_2D_physical_Feat_New_archs.ipynb  CNN_2D_physical_Feat_PCA.ipynb  CNN_2D_physical_Feat_Wavelet.ipynb  CNN_2D_physical_High_Pass_Filter.ipynb  CNN_2D_projections.ipynb  NN_suggested_Optuna.py  Scalability.ipynb  Zscore_normalization_plots.ipynb
