[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skyneuralnets"
version = "0.1.0"
description = "SkyNeuralNets: CNN-based model selection for cosmology."
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "numpy",
  "scipy",
  "matplotlib",
  "healpy",
  "astropy",
  "scikit-learn",
]

[project.optional-dependencies]
gpu = [
  "tensorflow",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]